# conch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml  rustfmt.toml
.config/: nextest.toml
.github/actions/mark-wasm-current/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  coreutils-demo.yml  curl-demo.yml  gh-demo.yml  js.yml  rebuild-cli-components.yml  ripgrep-demo.yml  sd-demo.yml  sqlite-demo.yml
.zed/: settings.json
ci/: bootstrap-go-wasip3.sh
clis/: coreutils.toml  curl.toml  gcx.toml  gh.toml  rg.toml  sd.toml  sqlite3.toml
clis/patches/: patch-curl.sh  patch-gcx-vendor.sh  patch-mbedtls.sh  patch-sd-wasip2.sh  patch-uucore-wasip2.sh
clis/shims/: mbedtls-wasi.c
crates/conch/: Cargo.toml  build.rs
crates/conch-build/: Cargo.toml
crates/conch-build/src/: main.rs  manifest.rs
crates/conch-build/src/lanes/: c.rs  go.rs  mod.rs  rust.rs
crates/conch-cli/: Cargo.toml
crates/conch-cli/src/: main.rs
crates/conch-grpc/: Cargo.toml  build.rs
crates/conch-grpc/proto/: conch.proto
crates/conch-grpc/src/: lib.rs  main.rs  remote_storage.rs  server.rs
crates/conch-grpc/tests/: integration.rs
crates/conch-mcp/: Cargo.toml  README.md
crates/conch-mcp/src/: lib.rs  main.rs
crates/conch-mcp/tests/: integration_test.rs
crates/conch-shell/: Cargo.toml
crates/conch-shell/src/: lib.rs
crates/conch-shell/src/builtins/: cat.rs  cp.rs  grep.rs  head.rs  jq.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs  tail.rs  tool.rs  touch.rs  wc.rs
crates/conch-shell/wit/: shell.wit
crates/conch-test-cmd/: Cargo.toml
crates/conch-test-cmd/src/: main.rs
crates/conch/examples/: agent_sandbox.rs  approval_and_policy.rs  basic.rs  custom_storage.rs  external_tools.rs  low_level.rs  policy_enforcement.rs  tool_execution.rs  vfs_mounts.rs
crates/conch/src/: ffi.rs  lib.rs  limits.rs  runtime.rs  shell.rs  snapshot.rs  tests.rs  vfs.rs  wasm.rs  wasm_core.rs
crates/conch/src/agent/: continuation.rs  history.rs  mod.rs  sandbox.rs  tools.rs  vfs.rs
crates/conch/src/executor/: child.rs  component.rs  core.rs  mod.rs  registry.rs
crates/conch/src/policy/: handler.rs  mod.rs  storage.rs
crates/conch/src/vfs/: context.rs  mod.rs  storage.rs
crates/conch/tests/: agent_integration.rs  subprocess.rs
crates/conch/wit/: shell.wit
docs/: .pathfilter-test.md  cli-component-builds.md  subprocess-components.md  subprocess-spawning.md
js/: .gitignore  README.md  mise.toml  shell-lite.wit
js/conch-shell/: README.md  index.d.ts  index.js  package-lock.json  package.json  process.js  stdin.d.ts  stdin.js  tool-handler.d.ts  tool-handler.js  vfs.d.ts  vfs.js
js/conch-shell/shims/: cli.js  clocks.js  filesystem.js  io.js  random.js
js/demo/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/demo/src/: App.svelte  main.ts
js/demo/src/lib/: Terminal.svelte  shell.svelte.ts
js/testpkg/: builtins.test.ts  package-lock.json  package.json  shell.test.ts  stateful.test.ts  stdin-default.test.ts  tool.test.ts  tsconfig.json  vfs-update.test.ts  vfs.test.ts  vitest.config.ts
notes/: 2026-01-22-cleanup.md  roadmap-cleanup.md  vfs-architecture.md  wasip1-vs-wasip2.md
patches/: brush-subprocess.patch  build-gh-wasm.sh  patch-gh-vendor.sh
scripts/: analyze-claude-commands.py
tests/go/: conch.go  conch_test.go  go.mod  simple_pipe_test.go
