[workspace]
resolver = "2"
members = ["crates/conch", "crates/conch-cli", "crates/conch-grpc", "crates/conch-mcp", "crates/conch-shell"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.90"

[workspace.dependencies]
# Host runtime (wasmtime 41+ for component model)
wasmtime = { version = "41", features = ["component-model", "async"] }
wasmtime-wasi = "41"
wasmtime-wasi-io = "41"

# VFS for WASI filesystem shadowing (from eryx project, local path for wasmtime 41 compat)
eryx-vfs = { git = "https://github.com/eryx-org/eryx", rev = "31a564b69c7877f15817b933b7d547e356305109" }

# Async
tokio = { version = "1" }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shell builtins (for WASM guest)
regex-lite = "0.1"
globset = "0.4"
glob = "0.3"

# Parsing - tree-sitter
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"

# Compression (for embedded component)
zstd = "0.13"

# FFI
libc = "0.2"

# Logging/tracing
tracing = "0.1"
brush-builtins = { git = "https://github.com/sd2k/brush", branch = "more-wasi-compat", default-features = false }
brush-core = { git = "https://github.com/sd2k/brush", branch = "more-wasi-compat", default-features = false }
conch = { path = "crates/conch" }
jaq-core = "3.0.0-beta"
jaq-json = "2.0.0-beta"
jaq-std = "3.0.0-beta"
wit-bindgen = "0.41"
rmcp = "0.13"
tracing-subscriber = "0.3"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
# Priority -1 ensures this lint group is applied before individual lints,
# avoiding clippy::lint_groups_priority warning about ambiguous ordering.
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"

# See https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = false

# Optimize heavy deps in dev mode to speed up tests
# (wasmtime/cranelift JIT is ~10-50x slower unoptimized)
[profile.dev.package]
cranelift-codegen.opt-level = 3
regalloc2.opt-level = 3
wasmtime.opt-level = 3
wasmparser.opt-level = 3

# Optimized profile for small WASM size
# Use with: cargo build -p conch-shell --target wasm32-wasip2 --profile release-wasm
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
