[package]
name = "conch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for testing the Conch shell"

[[bin]]
name = "conch"
path = "src/main.rs"

[dependencies]
conch = { workspace = true, features = ["embedded-shell"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
