[package]
name = "conch-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for Conch sandboxed shell execution"

[[bin]]
name = "conch-mcp"
path = "src/main.rs"

[dependencies]
conch = { path = "../conch", features = ["embedded-shell"] }
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true

[lints]
workspace = true
