[package]
name = "conch-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Brush-based shell WASM component for Conch"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Brush shell (using local patched version until wasm-js PR is merged)
brush-core = { workspace = true }
brush-builtins = { workspace = true, features = [
        "builtin.echo",
        "builtin.printf",
        "builtin.true",
        "builtin.false",
        "builtin.test",
        "builtin.pwd",
        "builtin.cd",
        "builtin.export",
        "builtin.set",
        "builtin.unset",
        "builtin.read",
        "builtin.declare",
        "builtin.shift",
        "builtin.return",
        "builtin.exit",
        "builtin.break",
        "builtin.continue",
        "builtin.colon",
        "builtin.dot",
        "builtin.eval",
        "builtin.exec",
        "builtin.type",
        "builtin.command",
        "builtin.alias",
        "builtin.unalias",
        "builtin.let",
        "builtin.getopts",
        "builtin.trap",
        "builtin.shopt",
] }

# Async runtime for WASM
tokio = { workspace = true, features = ["rt", "sync"] }

# Error handling
thiserror.workspace = true

# For builtins
regex-lite.workspace = true
serde_json.workspace = true

# jaq for proper jq implementation
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }

[lints]
workspace = true
