[package]
name = "conch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Virtual filesystem shell sandbox for agent tool call history"

[features]
default = []
# Embed the pre-built WASM component into the library binary.
# Requires building the component first:
#   cargo build -p conch-wasm --target wasm32-unknown-unknown --release
#   wasm-tools component new target/wasm32-unknown-unknown/release/conch_wasm.wasm \
#     -o target/conch_component.wasm
embedded-component = []
# Embed the brush-based shell WASM module (wasip1).
# Requires building the shell first:
#   cargo build -p conch-shell --target wasm32-wasip1 --release
embedded-shell = []
# Embed the uutils coreutils component and auto-register it under the util names
# (cat, head, tail, ls, wc, cp, mv, rm, mkdir, touch, sort) so the shell ships
# with coreutils out of the box (replacing the old hand-rolled builtins). Build
# the component first: `mise run build-cli -- coreutils`. Opt out at runtime with
# CONCH_DISABLE_EMBEDDED_COREUTILS=1. Only meaningful with `embedded-shell`.
embedded-coreutils = []

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-io.workspace = true
eryx-vfs.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
zstd.workspace = true
libc.workspace = true
tracing.workspace = true
glob.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dev-dependencies]
async-trait.workspace = true
eryx-vfs.workspace = true

[[example]]
name = "basic"
required-features = ["embedded-shell"]

[[example]]
name = "vfs_mounts"
required-features = ["embedded-shell"]

[[example]]
name = "low_level"
required-features = ["embedded-shell"]

[[example]]
name = "custom_storage"
required-features = ["embedded-shell"]

[[example]]
name = "agent_sandbox"
required-features = ["embedded-shell"]

[[example]]
name = "tool_execution"
required-features = ["embedded-shell"]

[[example]]
name = "external_tools"
required-features = ["embedded-shell"]

[[example]]
name = "approval_and_policy"
required-features = ["embedded-shell"]

[[example]]
name = "policy_enforcement"
required-features = ["embedded-shell"]

[[test]]
name = "agent_integration"
required-features = ["embedded-shell"]

[[test]]
name = "subprocess"
required-features = ["embedded-shell"]

[lints]
workspace = true
